--- a/Assets/Scripts/Dialog/DialogJson/jsconfig1.json
+++ b/Assets/Scripts/Dialog/DialogJson/jsconfig1.json
@@ -9,7 +9,7 @@
         "response2": "Essa é a resposta Correta B",
         "response3": "Essa é a resposta Correta C",
         "points":  "3000",
-        "correctResponse": "response1"
+        "correctResponse": "ResponseA"
       }
     },
     {
